мои предложения и мои заявки

--- a/src/personal-account_my-applications.html
+++ b/src/personal-account_my-applications.html
@@ -304,14 +304,14 @@
                                         <a href="#" class="personal-account-sidebar__link link link-dark">Моя компания</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои тендеры</a>
+                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои тендеры</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
                                         <a href="#" class="personal-account-sidebar__link link link-dark">Мои предложения на
                                         торгах</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои заявки</a>
+                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои заявки</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
                                         <a href="#" class="personal-account-sidebar__link link link-dark">Мои ответы на заявки</a>
@@ -340,52 +340,135 @@
                         </div>
                     </div>
                     <div class="personal-account__content">
-                        <h2 class="h2 mb-4">Мои тендеры</h2>
+                        <h2 class="h2 mb-2">Мои заявки</h2>
+                        <p class="mb-3">В этом разделе Вы можете управлять размещенными ранее заявками.</p>
+                        <h4 class="h4 personal-account__subscription-text">Текущие заявки</h4>
                         <div class="table table--bordered table-v3">
                             <div class="table__head">
-                                <div class="table__col table__col--pdata">
-                                    Дата
+                                <div class="table__col table__col--app-date">
+                                    Дата размещения
                                 </div>
-                                <div class="table__col table__col--tender-num">
-                                    № тендера
+                                <div class="table__col table__col--app-num">
+                                    № заявки
                                 </div>
-                                <div class="table__col table__col--pstructure">
-                                    Состав
+                                <div class="table__col table__col--app-structure">
+                                    Состав заявки
                                 </div>
-                                <div class="table__col table__col--tender-status">
-                                    Статус тендера
+                                <div class="table__col table__col--app-status">
+                                    Статус заявки
                                 </div>
                             </div>
                             <div class="table__body">
                                 <div class="table__row">
-                                    <div class="table__col table__col--pdata">
-                                        <div class="table__field">
-                                            <div class="grey">Создан</div>
-                                            <div>30.10.2021 в 15:20</div>
-                                        </div>
-                                        <div class="table__field">
-                                            <div class="grey">Период торгов</div>
-                                            <div><strong>30.10.2021 в 15:20</strong></div>
-                                        </div>
-                                        <div class="table__field">
-                                            <div class="grey">По</div>
-                                            <div><strong>30.10.2021 в 15:20</strong></div>
-                                        </div>
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
                                     </div>
-                                    <div class="table__col table__col--tender-num blue">
-                                        6843
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
                                     </div>
-                                    <div class="table__col table__col--pstructure">
-                                        <div class="mb-1"><strong>Тестовый</strong></div>
-                                        <p class="mb-1">
-                                            <strong>Лот 1</strong>
-                                            <span class="grey"><strong>Тестовый лот</strong></span>
-                                        </p>
-                                        <div class="mb-1"><strong>1. Бетонный блок</strong></div>
-                                        <div>Требется доставка</div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
                                     </div>
-                                    <div class="table__col table__col--tender-status table__col--grey">
-                                        Ожидает модерации
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--app-date">
+                                        30.10.2015 в 15:21
+                                    </div>
+                                    <div class="table__col table__col--app-num blue">
+                                        158630
+                                    </div>
+                                    <div class="table__col table__col--app-structure">
+                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
+                                        <a href="#" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
+                                    </div>
+                                    <div class="table__col table__col--app-status">
+                                        <div>Открыта</div>
+                                        <a href="" class="link link-sm">Закрыть заявку</a>
                                     </div>
                                 </div>
                             </div>
@@ -393,6 +476,11 @@
                         <ul class="pagination">
                             <li class="pagination-item">
                                 <a class="link pagination-link active" href="#">1</a>
+                                <a class="link pagination-link" href="#">2</a>
+                                <a class="link pagination-link" href="#">3</a>
+                                <li class="pagination-item">
+                                    <a class="link pagination-link pagination-link-next" href="#">Вперёд</a>
+                                </li>
                             </li>
                         </ul>
                     </div>
