--- a/src/personal-account_my-offers.html
+++ b/src/personal-account_my-offers.html
@@ -304,10 +304,10 @@
                                         <a href="#" class="personal-account-sidebar__link link link-dark">Моя компания</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои тендеры</a>
+                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои тендеры</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои предложения на
+                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои предложения на
                                         торгах</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
@@ -340,52 +340,123 @@
                         </div>
                     </div>
                     <div class="personal-account__content">
-                        <h2 class="h2 mb-4">Мои тендеры</h2>
+                        <h2 class="h2 mb-4">Мои предложения на торгах</h2>
                         <div class="table table--bordered table-v3">
                             <div class="table__head">
-                                <div class="table__col table__col--pdata">
-                                    Дата
-                                </div>
                                 <div class="table__col table__col--tender-num">
                                     № тендера
                                 </div>
-                                <div class="table__col table__col--pstructure">
-                                    Состав
+                                <div class="table__col table__col--offer-date">
+                                    Дата предложения
                                 </div>
-                                <div class="table__col table__col--tender-status">
+                                <div class="table__col table__col--offer-name">
+                                    Наименование
+                                </div>
+                                <div class="table__col table__col--offer-count">
+                                    Кол-во
+                                </div>
+                                <div class="table__col table__col--offer-width">
+                                    Длина
+                                </div>
+                                <div class="table__col table__col--offer-sort">
+                                    Сорт
+                                </div>
+                                <div class="table__col table__col--offer-price">
+                                    Цена
+                                </div>
+                                <div class="table__col table__col--offer-cost">
+                                    Стоимость
+                                </div>
+                                <div class="table__col table__col--offer-status">
                                     Статус тендера
                                 </div>
                             </div>
                             <div class="table__body">
                                 <div class="table__row">
-                                    <div class="table__col table__col--pdata">
-                                        <div class="table__field">
-                                            <div class="grey">Создан</div>
-                                            <div>30.10.2021 в 15:20</div>
-                                        </div>
-                                        <div class="table__field">
-                                            <div class="grey">Период торгов</div>
-                                            <div><strong>30.10.2021 в 15:20</strong></div>
-                                        </div>
-                                        <div class="table__field">
-                                            <div class="grey">По</div>
-                                            <div><strong>30.10.2021 в 15:20</strong></div>
-                                        </div>
-                                    </div>
                                     <div class="table__col table__col--tender-num blue">
-                                        6843
+                                        6841
                                     </div>
-                                    <div class="table__col table__col--pstructure">
-                                        <div class="mb-1"><strong>Тестовый</strong></div>
-                                        <p class="mb-1">
-                                            <strong>Лот 1</strong>
-                                            <span class="grey"><strong>Тестовый лот</strong></span>
-                                        </p>
-                                        <div class="mb-1"><strong>1. Бетонный блок</strong></div>
-                                        <div>Требется доставка</div>
+                                    <div class="table__col table__col--offer-date">
+                                        02.09.2019 в 10:33
                                     </div>
-                                    <div class="table__col table__col--tender-status table__col--grey">
-                                        Ожидает модерации
+                                    <div class="table__col table__col--offer-name">
+                                        На поставку бетонных блоков
+                                    </div>
+                                    <div class="table__col table__col--offer-count">
+                                        5
+                                    </div>
+                                    <div class="table__col table__col--offer-width">
+                                        2214
+                                    </div>
+                                    <div class="table__col table__col--offer-sort">
+                                        Металл
+                                    </div>
+                                    <div class="table__col table__col--offer-price">
+                                        12000 руб. за шт.
+                                    </div>
+                                    <div class="table__col table__col--offer-cost">
+                                        32 400 руб.
+                                    </div>
+                                    <div class="table__col table__col--offer-status green">
+                                        <strong>Идут торги</strong>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--tender-num blue">
+                                        6841
+                                    </div>
+                                    <div class="table__col table__col--offer-date">
+                                        02.09.2019 в 10:33
+                                    </div>
+                                    <div class="table__col table__col--offer-name">
+                                        На поставку бетонных блоков
+                                    </div>
+                                    <div class="table__col table__col--offer-count">
+                                        5
+                                    </div>
+                                    <div class="table__col table__col--offer-width">
+                                        2214
+                                    </div>
+                                    <div class="table__col table__col--offer-sort">
+                                        Металл
+                                    </div>
+                                    <div class="table__col table__col--offer-price">
+                                        12000 руб. за шт.
+                                    </div>
+                                    <div class="table__col table__col--offer-cost">
+                                        32 400 руб.
+                                    </div>
+                                    <div class="table__col table__col--offer-status green">
+                                        <strong>Идут торги</strong>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__col table__col--tender-num blue">
+                                        6841
+                                    </div>
+                                    <div class="table__col table__col--offer-date">
+                                        02.09.2019 в 10:33
+                                    </div>
+                                    <div class="table__col table__col--offer-name">
+                                        На поставку бетонных блоков
+                                    </div>
+                                    <div class="table__col table__col--offer-count">
+                                        5
+                                    </div>
+                                    <div class="table__col table__col--offer-width">
+                                        2214
+                                    </div>
+                                    <div class="table__col table__col--offer-sort">
+                                        Металл
+                                    </div>
+                                    <div class="table__col table__col--offer-price">
+                                        12000 руб. за шт.
+                                    </div>
+                                    <div class="table__col table__col--offer-cost">
+                                        32 400 руб.
+                                    </div>
+                                    <div class="table__col table__col--offer-status green">
+                                        <strong>Идут торги</strong>
                                     </div>
                                 </div>
                             </div>
