закончил остаток страниц личного кабинета

--- a/src/personal-account_my-ads.html
+++ b/src/personal-account_my-ads.html
@@ -311,13 +311,13 @@
                                         торгах</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои заявки</a>
+                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои заявки</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
                                         <a href="#" class="personal-account-sidebar__link link link-dark">Мои ответы на заявки</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
-                                        <a href="#" class="personal-account-sidebar__link link link-dark">Мои объявления</a>
+                                        <a href="#" class="personal-account-sidebar__link link link-dark active">Мои объявления</a>
                                     </li>
                                     <li class="personal-account-sidebar__item">
                                         <a href="/personal-account-sidebar-price.html" class="personal-account-sidebar__link link link-dark ">Подключить прайс-лист</a>
@@ -340,135 +340,29 @@
                         </div>
                     </div>
                     <div class="personal-account__content">
-                        <h2 class="h2 mb-2">Мои заявки</h2>
-                        <p class="mb-3">В этом разделе Вы можете управлять размещенными ранее заявками.</p>
-                        <h4 class="h4 personal-account__subscription-text">Текущие заявки</h4>
-                        <div class="table table--bordered table-v3">
+                        <h2 class="mb-3">Мои объявления</h2>
+                        <p class="grey mb-4">В этом разделе Вы можете управлять своими объявлениями.</p>
+                        <h4 class="mb-1">Текущие объявления</h4>
+                        <div class="table table--bordered ">
                             <div class="table__head">
-                                <div class="table__col table__col--app-date">
+                                <div class="table__col table__col--pdata">
                                     Дата размещения
                                 </div>
-                                <div class="table__col table__col--app-num">
-                                    № заявки
-                                </div>
-                                <div class="table__col table__col--app-structure">
-                                    Состав заявки
-                                </div>
-                                <div class="table__col table__col--app-status">
-                                    Статус заявки
+                                <div class="table__col">
+                                    Наименование
                                 </div>
                             </div>
                             <div class="table__body">
                                 <div class="table__row">
-                                    <div class="table__col table__col--app-date">
+                                    <div class="table__col table__col--pdata">
                                         30.10.2015 в 15:21
                                     </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="7">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="6">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="5">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="4">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="3">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="2">Закрыть заявку</a>
-                                    </div>
-                                </div>
-                                <div class="table__row">
-                                    <div class="table__col table__col--app-date">
-                                        30.10.2015 в 15:21
-                                    </div>
-                                    <div class="table__col table__col--app-num blue">
-                                        158630
-                                    </div>
-                                    <div class="table__col table__col--app-structure">
-                                        <div>труба (трубка) латунная размер: 19х1, длина: , сталь: , кол-во: 8,7</div>
-                                        <a href="/personal-account_my-application.html" class="link link-sm">Посмотреть ответы поставщиков <span class="red">(ответов: 1)</span></a>
-                                    </div>
-                                    <div class="table__col table__col--app-status">
-                                        <div>Открыта</div>
-                                        <a href="" class="link link-sm js-close-application" data-app-id="1">Закрыть заявку</a>
+                                    <div class="table__col table__col--delete">
+                                        <p class="sm"><strong>Продам Много дорогой арматуры А3 12 мм</strong></p>
+                                        <p class="sm">Продам Много дорогой арматуры А3 12 мм А 500С Нд срочно</p>
+                                        <a href="#">
+                                            <img class="js-delete-ads table__icon-delete" src="img/icon-сross-dark.svg" alt="">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -476,19 +370,12 @@
                         <ul class="pagination">
                             <li class="pagination-item">
                                 <a class="link pagination-link active" href="#">1</a>
-                                <a class="link pagination-link" href="#">2</a>
-                                <a class="link pagination-link" href="#">3</a>
-                                <li class="pagination-item">
-                                    <a class="link pagination-link pagination-link-next" href="#">Вперёд</a>
-                                </li>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-
-
     </div>
 
     <!-- AUTH Modal -->
@@ -561,13 +448,13 @@
     </div>
     <!-- REGION CHOOSE Modal -->
 
-    <!-- Application delete Modal -->
-    <div class="modal fade" id="applicationDeleteModal" tabindex="-1" aria-labelledby="applicationDeleteModal" aria-hidden="true">
+    <!-- Ads delete Modal -->
+    <div class="modal fade" id="adsDeleteModal" tabindex="-1" aria-labelledby="applicationDeleteModal" aria-hidden="true">
         <div class="modal-dialog modalS">
             <div class="modal-content modalS__content">
                 <button type="button" class="btn-close modalS__btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                <h2 class="h2 mb-3">Удалить заявку</h2>
-                <p class="mb-4">Вы действительно хотите удалить заявку?</p>
+                <h2 class="h2 mb-3">Удалить объявление</h2>
+                <p class="mb-4">Вы действительно хотите удалить объявление?</p>
                 <div class="d-flex justify-content-lg-end">
                     <button class="btn btn-secondary">Отмена</button>
                     <button class="btn btn-primary ms-3">Удалить</button>
@@ -575,7 +462,7 @@
         </div>
         </div>
     </div>
-    <!-- Application delete Modal -->
+    <!-- Ads delete Modal -->
 
 
     <footer class="footer">
